@@ -8,18 +8,23 @@ import com.insta.api.insta.exception.NotFoundException;
 import com.insta.api.insta.persistence.model.follower.Follower;
 import com.insta.api.insta.persistence.model.post.Post;
 import com.insta.api.insta.persistence.model.tag.Tag;
+import com.insta.api.insta.persistence.model.user.User;
 import com.insta.api.insta.persistence.repository.follower.IFollowerRepository;
 import com.insta.api.insta.persistence.repository.post.IPostRepository;
 import com.insta.api.insta.persistence.repository.tag.ITagRepository;
+import com.insta.api.insta.persistence.repository.user.IUserRepository;
 import com.insta.api.insta.security.LoggedUser;
 import lombok.RequiredArgsConstructor;
+import org.apache.logging.log4j.util.PropertySource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.insta.api.insta.exception.ExceptionMessages.*;
 
@@ -31,6 +36,7 @@ public class PostService implements IPostService {
     private final IPostConverter postConverter;
     private final IFollowerRepository followerRepository;
     private final LoggedUser user;
+    private final IUserRepository userRepository;
 
     @Override
     public List<PostDto> getAll() {
@@ -41,7 +47,6 @@ public class PostService implements IPostService {
     public PostDto add(AddPostDto addPostDto) {
         addPostDto.setUserId(user.getLoggedUser().getId());
         Post newPost = this.postConverter.converter(addPostDto, Post.class);
-        newPost.setUserName(user.getLoggedUser().getUsername());
         if (newPost.getTagList() != null) {
             for (int i = 0; i < newPost.getTagList().size(); i++) {
                 newPost.getTagList().set(i, this.tagRepository.findByTag(newPost.getTagList().get(i).getTag())
@@ -95,8 +100,20 @@ public class PostService implements IPostService {
     @Override
     public List<PostDto> getPostsFromFollowing() {
         List<Follower> follows = this.followerRepository.findFollowsByUserId(user.getLoggedUser().getId());
-        List<Long> ids = follows.stream().map(follow -> follow.getFollowed().getId()).toList();
-        List<Post> posts = this.postRepository.findByUserIdIn(ids);
-        return this.postConverter.converterList(posts, PostDto.class);
+        List<Long> ids = follows.stream().map(follow -> follow.getFollowed().getId()).collect(Collectors.toList());
+        User users = this.userRepository.findById(user.getLoggedUser().getId()).get();
+        List<Long> allIds = new ArrayList<>(ids);
+        allIds.add(users.getId());
+        List<Post> allPosts = new ArrayList<>();
+        for (Long id : allIds) {
+           allPosts.addAll(this.postRepository.findByUserId(id));
+        }
+        return this.postConverter.converterList(allPosts, PostDto.class);
+    }
+
+    @Override
+    public List<PostDto> getPostsByUserId() {
+        return this.postConverter
+                .converterList(this.postRepository.findByUserId(user.getLoggedUser().getId()), PostDto.class);
     }
 }
